--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/random-words": "^1.1.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "firebase": "^9.6.6",
+    "@types/react-router-dom": "5.3.0",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
+    "express": "^4.17.2",
+    "firebase": "^9.6.7",
     "framer-motion": "^5",
     "random-words": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
