--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^7.0.0",
     "random-words": "^1.1.2",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
