--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@
 /.pnp
 .pnp.js
 
-#env files
-/.env
-
 # testing
 /coverage
 
@@ -16,6 +13,7 @@
 
 # misc
 .DS_Store
+.env.development
 .env.local
 .env.development.local
 .env.test.local
