--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/react-router-dom": "5.3.0",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
-    "firebase": "^9.6.7",
+    "firebase": "^9.9.2",
+    "firebase-cli": "^1.2.0",
     "framer-motion": "^7.0.0",
     "random-words": "^1.1.2",
     "react": "^17.0.2",
